# Language-Tutor

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.cpu.yml  docker-compose.yml  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: analysis-signatures.md  architecture.md  canonicalization-audit.md  data-model.md  deployment.md  llm-providers.md  phoneme-analysis.md  pipeline.md  ui.md
phase-plans/: README.md  phase-0-project-scaffolding.md  phase-1-analysis-pipeline.md  phase-2-llm-feedback.md  phase-3-web-ui.md  phase-4-history-progress.md  phase-5-polish-hardening.md
src/polyglot/: __init__.py
src/polyglot/analysis/: __init__.py  aggregator.py  alignment.py  asr_whisperx.py  audio.py  errors.py  fluency.py  g2p.py  interfaces.py  ipa_mapping.py  models.py  phoneme_recognizer.py  pipeline.py  text_normalize.py
src/polyglot/api/: __init__.py  app.py  dependencies.py  version.py
src/polyglot/api/routes/: analyze.py  health.py  metrics.py
src/polyglot/config/: settings.py
src/polyglot/drills/: __init__.py
src/polyglot/frontend/: __init__.py
src/polyglot/frontend/static/: index.html
src/polyglot/llm/: __init__.py
src/polyglot/storage/: __init__.py
tests/: conftest.py  test_healthz.py
tests/fixtures/: README.md  generate_wav_fixtures.py  latest_fixture_run.json
tests/golden/: de_clean_read.json  de_long_pause.json  de_phoneme_substitution.json  de_word_substitution.json  en_clean_read.json  en_long_pause.json  en_phoneme_substitution.json  en_word_substitution.json
tests/integration/: test_analyze_endpoint.py
tests/unit/: test_aggregator.py  test_alignment.py  test_audio_resampling.py  test_fluency.py  test_ipa_mapping.py  test_text_normalize.py
